<resources>
    <string name="app_name">Street Pal</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="select_contact">Select your  trusted contact</string>
    <string name="contact_name">Name</string>
    <string name="register_txt">Don\'t have an account? <b>Sign Up</b></string>
    <string name="contact_mob">Mobile</string>
    <string name="select_button">Select</string>
    <string name="action_done">Done</string>
    <string name="login">Login</string>
    <string name="OPenG">Open Gallery</string>
    <string name="cancel_button">Cancel</string>
    <string name="recording">Recording</string>
    <string name="tvnumber">Number</string>
    <string name="tvsignUP">Sign Up</string>
    <string name="tvuploadPP">Upload Profile Picture</string>
    <string name="OPenC">Open Camera</string>
    <string name="EditTxt">Confirmation Code </string>
    <string name="btn1">Submit</string>
    <string name="btn2">Resend </string>
    <string name="b"> Select From  </string>
    <string name="TxtView"> Confirmation Code Will Be Sent to your email Within 60 Sec.
    </string>
    <string name="privateinfo">Private Information</string>
    <string name="confrim_title">CONFIRMATION</string>
    <string-array name="Sex">
        <item>Sex</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="tv_upload_profile_picture">Upload Profile Picture</string>
    <string name="change_profile_text">Change Profile Picture</string>
    <string name="user_name_hint">User Name</string>
    <string name="mail_hint">E-Mail Address</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="sex_hint">Sex</string>
    <string name="age_hint">Age</string>
    <string name="work_hint">Work</string>
    <string name="back_button">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="editProfilePrivateInfo">PRIVATE INFORMATION</string>
    <string name="national_id_hint">National ID</string>
    <string name="password_hint">Password</string>
    <string name="edtiprofile">Edit Profile</string>
    <string name="username">User Name</string>
    <string name="Home_title_name">Street pal </string>
    <string name="Home_title_name_typing">Street Pal \n typing...</string>
    <string name="map_title_name">Safe Places</string>
    <string name="guide_title_name">Guide</string>
    <string name="upload_national_card">Upload National Card</string>
    <string name="editProfileFullName">Name</string>
    <string name="name">Name</string>
    <string name="Confirmation_Message">Your location will be sent within 10s,If you want to cancel help click cancel.</string>
    <string name="Welcome">Welcome</string>
    <string name="string">In case you need our help &amp; found you can \n \t
                 directly contact just call our help. "</string>
    <string name="string3">I have been sexually harassed </string>
    <string name="string2">I am being sexually harassed now.\n What should i do?</string>
    <string name="string1">I think i am being followed and someone is about to sexually harass me.\n What should i do?</string>
    <string name="WelcomeText">Tell us what\'s happening</string>
    <string name="title_activity_congratulation">CongratulationActivity</string>
    <string name="add_trusted_contact">ADD TRUSTED CONTACT</string>
    <string name="skip">Skip</string>
    <string name="select_your_trusted_contact">Select your trusted contact that you want</string>
    <string name="select_your_trusted_contact_part2">to help you later</string>
    <string name="Your_selected_contact">Your selected contact is</string>
    <string name="please_tab_next">Please tab next to finish your selection</string>
    <string name="title_location_permission">Location Acess</string>
    <string name="text_location_permission">Allow app to acess you location</string>
    <string name="ok">Ok</string>
    <string name="Safe_Places">SAFE PLACES</string>
    <string name="select_place_that_y_need">Select place that you need then tap navigate</string>
    <string name="mark_safe">Mark safe</string>
    <string name="call_vol">Call volunteer</string>
    <string name="text_dialog_choose">Choose option</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Gallery</string>
    <string name="err_toast">Failed to uploade profile picture</string>
    <string name="txt_try_toUpload_again">Try again</string>
    <string name="uploaded_successfully">Profile picture is uploaded successfully</string>
    <string name="smthing_went_wrong">Something went wrong</string>
    <string name="exit">Exit</string>
    <string name="txt_are_you_sure">Are you sure?</string>
    <string name="loginmail_validation">Empty username or email</string>
    <string name="loginpass_validation">Empty password</string>
    <string name="loginpass_validation_invalid">Invalid password</string>
    <string name="txt_connection_Failed">Connection Failed</string>
    <string name="dialog_logging">Logging in ...</string>
    <string name="dialog_signing_up">Signing up ...</string>
    <string name="signup_name_validation">Empty name</string>
    <string name="signup_emptymail_validation">Empty E-mail Address</string>
    <string name="signup_invalidmail_validation">Invalid E-mail</string>
    <string name="signup_year_validation">Empty year </string>
    <string name="signup_month_validation">Empty month</string>
    <string name="signup_day_validation">Empty day </string>
    <string name="signup_phonenumber_validation">Empty phone number</string>
    <string name="signup_username_validation">Empty username</string>
    <string name="signup_work_validation">Empty work</string>
    <string name="signup_nationalid_validation">Empty national ID</string>
    <string name="select_trusted_contact_dialog_title">Select contact</string>
    <string name="select_trusted_contact_dialog_message">Are you sure you want to select this contact ?</string>
    <string name="select_trusted_contact_dialog_message_skipping">Are you sure you want to skip this step ?</string>
    <string name="confimation_code_validation">Empty code</string>
    <string name="checkInternet">Check your internet connection</string>
    <string name="saveChangesdialoge">Save Changes</string>
    <string name="saveChangesMessage">Are you sure you want to save the changes ?</string>
    <string name="txtcontactAccessNeeded">Contacts access needed</string>
    <string name="txtcontactAccessNeededmessage">please confirm Contacts access </string>
    <string name="txtNoPermissions">No permissions</string>
    <string name="txtLoading">Loading...</string>
    <string name="txtRecordingstop">Recording Stopped and the audio file saved into file manager.</string>
    <string name="txtSuccess">Success</string>
    <string name="resolutionRequired">Resolution Required</string>
    <string name="txtSettingsChange">Settings change unavailable</string>
    <string name="mapyourLocation">Your location</string>
    <string name="setting">OPTIONS</string>
    <string name="changepass">Changing password...</string>
    <string name="sendmail_feedbackActivity">Send mail...</string>
    <string name="feedback_err">You did not enter a feedback</string>
    <string name="settings">SETTINGS</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="account">ACCOUNT</string>
    <string name="editProfile">Edit Profile</string>
    <string name="Change_Password">Change Password</string>
    <string name="trusted_contact">Trusted Contact</string>
    <string name="Report_a_problem">Report a Problem</string>
    <string name="logout">Logout</string>
    <string name="support">SUPPORT </string>
    <string name="password1">PASSWORD</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="united_kingdom">(United States)</string>
    <string name="english">English</string>
    <string name="egypt">(Egypt)</string>
    <string name="arabic">Arabic</string>
    <string name="add_new">Add new</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="Feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="generalfeedback">GENERAL FEEDBACK</string>
    <string name="Briefly">Briefly Explain What you Love , or what could improve</string>
    <string name="err_changePass">Do not match</string>
    <string name="static_guide_title">These FAQs should help you know more about what you are dealing with</string>
    <string name="static_guide_case1">What is sexual harassment?</string>
    <string name="static_guide_case2">I am being sexually harassed now, what should I do?</string>
    <string name="static_guide_case2_instructions">- We will send a distress signal, your trusted contacts will be notified.\n
- Meanwhile, follow our instructions.\n
        - Try to get attention to your situation by loudly asking for help and stating what happened exactly “Sexual Harassment”\n
- Ask people to help you by taking him to the nearest police station and to testify while filing the official sexual harassment report.\n
</string>
    <string name="static_guide_case3">I have been sexually harassed and I am now at the police station, what should I do?</string>
    <string name="user_guide_postive_button">Yes</string>
    <string name="user_guide_negative_button">No</string>
    <string name="user_guide_neutral_button">I have been sexually harassed </string>
    <string name="Hello"> Hello, I am StreetPal</string>
    <string name="guidme"> Guide me  </string>
    <string name="and"> and I am here to help you stand up for yourself.</string>
    <string name="ABOUT_STREET_PAL">ABOUT STREET PAL</string>
    <string name="Guide"> - Guide to relevant entities for legal and psychological help.
</string>
    <string name="Navigation"> - Navigation to safe places, Police station and hospital.</string>
    <string name="Smart"> - Smart guide -in steps- on what to do when subjected to or witness sexual harassment </string>
    <string name="Building"> - Increase awareness about sexual violence and sexual harassment </string>
    <string name="Effective"> - Effective guidance of sexual harassment victims towards proper conduct  </string>
    <string name="Objectives"> Our service aims to: </string>
    <string name="STREET_PAL_des">StreetPal® is smart application platform aims at building a community of well-trained advocates who
        are able to help spread awareness about sexual harassment and effectively take part in combating the crime through
        the current national legal framework. All by gathering common practices and solutions in a smart and easy compact tool
        introducing a new comprehensive
        and interactive guide on how to combat sexual harassment using technology.

</string>
    <string name="mainfeatures">Service main features:</string>
</resources>