<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/aboutlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.sharekeg.streetpal.Settings.AboutAsActivity">

        <RelativeLayout
            android:id="@+id/upperLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/login_button_bg"
            android:minHeight="40dp"
            android:padding="10dp">

            <com.sharekeg.streetpal.TextViewForEnglish
                android:id="@+id/settings_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/login_button_bg"
                android:text="@string/ABOUT_STREET_PAL"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_title_text_size" />

            <ImageButton
                android:id="@+id/IV_back_About"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:background="@drawable/ripple_effect"
                android:padding="5dp"
                android:src="@drawable/back_icon"
                android:layout_alignParentLeft="true" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upperLayout"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/logo_street_pal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_confirm_icon" />


            <LinearLayout
                android:id="@+id/fillinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_below="@+id/logo_street_pal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <com.sharekeg.streetpal.TextViewForEnglish
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo_street_pal"
                    android:text="@string/STREET_PAL_des"
                    android:textColor="@color/black"
                    android:textSize="@dimen/privacy_text_size" />

                <com.sharekeg.streetpal.TextViewForEnglish
                    android:id="@+id/Objectives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Objectives"
                    android:textColor="@color/black"
                    android:textSize="@dimen/privacy_title_text_size"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Objectives"
                    android:layout_marginTop="5dp"
                    android:background="@color/login_controls_bg"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <com.sharekeg.streetpal.TextViewForEnglish
                        android:id="@+id/Building"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Building"
                        android:textColor="@color/black" />

                    <com.sharekeg.streetpal.TextViewForEnglish
                        android:id="@+id/Effective"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Building"
                        android:layout_marginTop="10dp"
                        android:text="@string/Effective"
                        android:textColor="@color/black"
                        android:textSize="@dimen/privacy_text_size" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.sharekeg.streetpal.TextViewForEnglish
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Building"
                        android:layout_marginTop="10dp"
                        android:text="@string/mainfeatures"
                        android:textColor="@color/black"
                        android:textSize="@dimen/privacy_title_text_size"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Objectives"
                    android:layout_marginTop="5dp"
                    android:background="@color/login_controls_bg"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <com.sharekeg.streetpal.TextViewForEnglish
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Smart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/privacy_text_size" />

                    <com.sharekeg.streetpal.TextViewForEnglish
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Building"
                        android:layout_marginTop="10dp"
                        android:text="@string/Navigation"
                        android:textColor="@color/black"
                        android:textSize="@dimen/privacy_text_size" />

                    <com.sharekeg.streetpal.TextViewForEnglish
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Building"
                        android:layout_marginTop="10dp"
                        android:text="@string/Guide"
                        android:textColor="@color/black"
                        android:textSize="@dimen/privacy_text_size" />


                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
