<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="15dp"
    tools:context="com.sharekeg.streetpal.homefragments.StartHomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:id="@+id/infolayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAddUserPhoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:maxHeight="90dp"
            android:maxWidth="90dp"
            android:minHeight="60dp"
            android:minWidth="60dp"
            android:src="@drawable/ic_default_user" />


        <com.sharekeg.streetpal.langutil.TextViewForEnglish
            android:id="@+id/tvusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_title_text_size" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infolayout"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/IV_hello"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="138dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_hello"
            android:gravity="center" />

        <com.sharekeg.streetpal.langutil.TextViewForEnglish
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IV_hello"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/Hello"
            android:textSize="@dimen/text_size" />

        <com.sharekeg.streetpal.langutil.TextViewForEnglish
            android:id="@+id/And"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hello"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/and"
            android:textSize="@dimen/text_size" />


        <ImageButton
            android:id="@+id/IV_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/And"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_guide_btn"

            />

        <com.sharekeg.streetpal.langutil.TextViewForEnglish
            android:id="@+id/guidme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/IV_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/guidme"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

</RelativeLayout>
