<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/select_trusted_contact2__activity_bar2_color"
    tools:context="com.sharekeg.streetpal.Settings.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/TV_passward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/login_button_bg"
        android:minHeight="40dp"
        android:padding="10dp">

        <com.sharekeg.streetpal.TextViewForEnglish
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ripple_effect"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />


        <com.sharekeg.streetpal.TextViewForEnglish
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/password1"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_title_text_size" />

        <com.sharekeg.streetpal.TextViewForEnglish
            android:id="@+id/btndone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ripple_effect"
            android:padding="5dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/old_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TV_passward"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.sharekeg.streetpal.EditTextForEnglish
            android:id="@+id/oldpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="9dp"
            android:drawableStart="@drawable/ic_password_setting"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/login_controls_hint"
            android:textSize="@dimen/text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="110dp"
            android:background="@color/select_trusted_contact2__activity_bar2_color">

            <com.sharekeg.streetpal.EditTextForEnglish
                android:id="@+id/newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="9dp"
                android:drawableStart="@drawable/ic_password_setting"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_controls_hint"
                android:textSize="@dimen/text_size" />

            <com.sharekeg.streetpal.EditTextForEnglish
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newpassword"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="9dp"
                android:drawableStart="@drawable/ic_password_setting"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_controls_hint"
                android:textSize="@dimen/text_size" />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
