<?xml version="1.0" encoding="utf-8"?>

<!--Fragment  layout for the StreetPal guide bot-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1">

    <RelativeLayout
        android:id="@+id/rlStreetPalGuide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chatList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rlChoices"
            android:layout_marginTop="1dp"
            android:background="#f1f1f1">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/rlChoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:orientation="vertical"
            android:paddingTop="8dp">


            <com.sharekeg.streetpal.langutil.TextViewForEnglish
                android:id="@+id/user_first_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/replyshape"
                android:maxHeight="60dp"
                android:minHeight="20dp"
                android:minWidth="150dp"
                android:padding="7dp"
                android:text="@string/user_guide_postive_button"
                android:textAlignment="center"
                android:textSize="13sp" />

            <com.sharekeg.streetpal.langutil.TextViewForEnglish
                android:id="@+id/user_second_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/replyshape"
                android:maxHeight="60dp"
                android:minHeight="30dp"
                android:minWidth="150dp"
                android:padding="7dp"
                android:text="@string/user_guide_negative_button"
                android:textAlignment="center"
                android:textSize="13sp" />

            <com.sharekeg.streetpal.langutil.TextViewForEnglish
                android:id="@+id/user_third_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/replyshape"
                android:maxHeight="60dp"
                android:minHeight="30dp"
                android:minWidth="150dp"
                android:padding="7dp"
                android:text="@string/user_guide_neutral_button"
                android:textAlignment="center"
                android:textSize="13sp" />


        </LinearLayout>

    </RelativeLayout>
</FrameLayout>